--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,24 +5,340 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     tools:context="com.devup.opointdoacai.opointdoacai.MainActivity"
     android:id="@+id/main_layout"
-    android:background="#FFFFFF"
-    android:orientation="vertical">
+    android:background="#FFFFFF">
 
-    <Button
-        android:id="@+id/logout_btn"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"
-        android:layout_width="100dp"
-        android:layout_height="40dp"
-        android:text="Sair"
-        android:background="@drawable/background"
-        android:textColor="@color/colorTextWithe"
-        android:textStyle="bold" />
+    <android.support.design.widget.CoordinatorLayout
+        android:id="@+id/main_coordinator_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/app_bar_main"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:background="@color/colorPrimary"
+            android:theme="@style/MainTheme">
+
+            <android.support.design.widget.CollapsingToolbarLayout
+                android:id="@+id/collapsing_toolbar_main"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/path"
+                app:contentScrim="?attr/colorPrimaryDark"
+                app:expandedTitleMarginEnd="64dp"
+                app:expandedTitleMarginStart="48dp"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed"
+                app:title="O Point do Açaí">
+
+                <android.support.v7.widget.Toolbar
+                    android:id="@+id/toolbar_id_main"
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    app:layout_collapseMode="pin"
+                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+
+                </android.support.v7.widget.Toolbar>
+
+            </android.support.design.widget.CollapsingToolbarLayout>
+
+        </android.support.design.widget.AppBarLayout>
+
+        <android.support.v4.widget.NestedScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:duplicateParentState="false"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:paddingTop="20dp"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:clipToPadding="false"
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    android:paddingBottom="22dp">
+
+                    <android.support.design.widget.CoordinatorLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:clipToPadding="false"
+                        android:orientation="vertical"
+                        android:paddingRight="11dp">
 
 
+                        <android.support.v7.widget.CardView
+                            android:id="@+id/card_view"
+                            android:layout_width="150dp"
+                            android:layout_height="138dp"
+                            android:layout_margin="10dp"
+                            app:cardCornerRadius="5dp">
+
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:background="@color/cardview_light_background"
+                                android:gravity="center"
+                                android:orientation="vertical">
+
+                                <ImageView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:src="@drawable/iconacai" />
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:gravity="center"
+                                    android:padding="10dp"
+                                    android:text="Açaí"
+                                    android:textColor="#646464"/>
+
+                            </LinearLayout>
+
+                        </android.support.v7.widget.CardView>
+
+                        <Button
+                            android:id="@+id/btn_acai"
+                            android:layout_width="102dp"
+                            android:layout_height="28dp"
+                            android:background="@drawable/botao"
+                            app:layout_anchor="@+id/card_view"
+                            app:layout_anchorGravity="bottom|center" />
+                    </android.support.design.widget.CoordinatorLayout>
+
+                    <android.support.design.widget.CoordinatorLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:clipToPadding="false"
+                        android:gravity="center"
+                        android:orientation="vertical"
+                        android:paddingLeft="11dp">
+
+                        <android.support.v7.widget.CardView
+                            android:id="@+id/card_view2"
+                            android:layout_width="150dp"
+                            android:layout_height="138dp"
+                            android:layout_margin="10dp"
+                            app:cardCornerRadius="5dp">
+
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:background="@color/cardview_light_background"
+                                android:gravity="center"
+                                android:orientation="vertical">
+
+                                <ImageView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:src="@drawable/iconacai" />
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:gravity="center"
+                                    android:padding="10dp"
+                                    android:text="Top 10 do Point"
+                                    android:textColor="#646464"/>
+
+                            </LinearLayout>
+
+                        </android.support.v7.widget.CardView>
+
+                        <Button
+                            android:id="@+id/btn_acai_top"
+                            android:layout_width="102dp"
+                            android:layout_height="28dp"
+                            android:background="@drawable/botao"
+                            app:layout_anchor="@+id/card_view2"
+                            app:layout_anchorGravity="bottom|center" />
+
+                    </android.support.design.widget.CoordinatorLayout>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:clipToPadding="true"
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    android:paddingBottom="22dp">
+
+                    <android.support.design.widget.CoordinatorLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:clipToPadding="false"
+                        android:orientation="vertical"
+                        android:paddingRight="11dp">
+
+
+                        <android.support.v7.widget.CardView
+                            android:id="@+id/card_view3"
+                            android:layout_width="150dp"
+                            android:layout_height="138dp"
+                            android:layout_margin="10dp"
+                            app:cardCornerRadius="5dp">
+
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:background="@color/cardview_light_background"
+                                android:gravity="center"
+                                android:orientation="vertical">
+
+                                <ImageView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:src="@drawable/iconsucos" />
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:gravity="center"
+                                    android:padding="10dp"
+                                    android:text="Sucos"
+                                    android:textColor="#646464"/>
+
+                            </LinearLayout>
+
+                        </android.support.v7.widget.CardView>
+
+                        <Button
+                            android:id="@+id/btn_sucos"
+                            android:layout_width="102dp"
+                            android:layout_height="28dp"
+                            android:background="@drawable/botao"
+                            app:layout_anchor="@+id/card_view3"
+                            app:layout_anchorGravity="bottom|center" />
+                    </android.support.design.widget.CoordinatorLayout>
+
+                    <android.support.design.widget.CoordinatorLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:clipToPadding="false"
+                        android:gravity="center"
+                        android:orientation="vertical"
+                        android:paddingLeft="11dp">
+
+                        <android.support.v7.widget.CardView
+                            android:id="@+id/card_view4"
+                            android:layout_width="150dp"
+                            android:layout_height="138dp"
+                            android:layout_margin="10dp"
+                            app:cardCornerRadius="5dp">
+
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:background="@color/cardview_light_background"
+                                android:gravity="center"
+                                android:orientation="vertical">
+
+                                <ImageView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:src="@drawable/iconvitaminas" />
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:gravity="center"
+                                    android:padding="10dp"
+                                    android:text="Vitaminas"
+                                    android:textColor="#646464"/>
+
+                            </LinearLayout>
+
+                        </android.support.v7.widget.CardView>
+
+                        <Button
+                            android:id="@+id/btn_vitaminas"
+                            android:layout_width="102dp"
+                            android:layout_height="28dp"
+                            android:background="@drawable/botao"
+                            app:layout_anchor="@+id/card_view4"
+                            app:layout_anchorGravity="bottom|center" />
+
+                    </android.support.design.widget.CoordinatorLayout>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:clipToPadding="false"
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    android:paddingBottom="22dp">
+
+                    <android.support.design.widget.CoordinatorLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:clipToPadding="false"
+                        android:orientation="vertical">
+
+
+                        <android.support.v7.widget.CardView
+                            android:id="@+id/card_view6"
+                            android:layout_width="344dp"
+                            android:layout_height="138dp"
+                            android:layout_margin="10dp"
+                            app:cardCornerRadius="5dp">
+
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:background="@color/cardview_light_background"
+                                android:gravity="center"
+                                android:orientation="vertical">
+
+                                <ImageView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:src="@drawable/iconsaladadefrutas" />
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:gravity="center"
+                                    android:padding="10dp"
+                                    android:text="Salada de Frutas"
+                                    android:textColor="#646464"/>
+
+                            </LinearLayout>
+
+                        </android.support.v7.widget.CardView>
+
+                        <Button
+                            android:id="@+id/btn_saladadefrutas"
+                            android:layout_width="102dp"
+                            android:layout_height="28dp"
+                            android:background="@drawable/botao"
+                            app:layout_anchor="@+id/card_view6"
+                            app:layout_anchorGravity="bottom|center" />
+                    </android.support.design.widget.CoordinatorLayout>
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+        </android.support.v4.widget.NestedScrollView>
+
+    </android.support.design.widget.CoordinatorLayout>
 
 </RelativeLayout>
