--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,7 +26,7 @@
         <item name="android:font" tools:targetApi="o">@font/source_sans_pro</item>
     </style>
 
-    <style name="MTheme" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
+    <style name="MainTheme" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
