--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -74,8 +74,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:clipToPadding="false"
-                        android:orientation="vertical"
-                        android:paddingRight="11dp">
+                        android:orientation="vertical">
 
 
                         <android.support.v7.widget.CardView
@@ -104,7 +103,7 @@
                                     android:gravity="center"
                                     android:padding="10dp"
                                     android:text="Açaí"
-                                    android:textColor="#646464"/>
+                                    android:textColor="#646464" />
 
                             </LinearLayout>
 
@@ -124,8 +123,7 @@
                         android:layout_height="wrap_content"
                         android:clipToPadding="false"
                         android:gravity="center"
-                        android:orientation="vertical"
-                        android:paddingLeft="11dp">
+                        android:orientation="vertical">
 
                         <android.support.v7.widget.CardView
                             android:id="@+id/card_view2"
@@ -153,7 +151,7 @@
                                     android:gravity="center"
                                     android:padding="10dp"
                                     android:text="Top 10 do Point"
-                                    android:textColor="#646464"/>
+                                    android:textColor="#646464" />
 
                             </LinearLayout>
 
@@ -182,8 +180,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:clipToPadding="false"
-                        android:orientation="vertical"
-                        android:paddingRight="11dp">
+                        android:orientation="vertical">
 
 
                         <android.support.v7.widget.CardView
@@ -212,7 +209,7 @@
                                     android:gravity="center"
                                     android:padding="10dp"
                                     android:text="Sucos"
-                                    android:textColor="#646464"/>
+                                    android:textColor="#646464" />
 
                             </LinearLayout>
 
@@ -232,8 +229,7 @@
                         android:layout_height="wrap_content"
                         android:clipToPadding="false"
                         android:gravity="center"
-                        android:orientation="vertical"
-                        android:paddingLeft="11dp">
+                        android:orientation="vertical">
 
                         <android.support.v7.widget.CardView
                             android:id="@+id/card_view4"
@@ -261,7 +257,7 @@
                                     android:gravity="center"
                                     android:padding="10dp"
                                     android:text="Vitaminas"
-                                    android:textColor="#646464"/>
+                                    android:textColor="#646464" />
 
                             </LinearLayout>
 
@@ -295,7 +291,7 @@
 
                         <android.support.v7.widget.CardView
                             android:id="@+id/card_view6"
-                            android:layout_width="344dp"
+                            android:layout_width="320dp"
                             android:layout_height="138dp"
                             android:layout_margin="10dp"
                             app:cardCornerRadius="5dp">
@@ -319,7 +315,7 @@
                                     android:gravity="center"
                                     android:padding="10dp"
                                     android:text="Salada de Frutas"
-                                    android:textColor="#646464"/>
+                                    android:textColor="#646464" />
 
                             </LinearLayout>
 
