--- a/app/src/main/res/layout/activity_sizes.xml
+++ b/app/src/main/res/layout/activity_sizes.xml
@@ -11,7 +11,7 @@
     <android.support.design.widget.CoordinatorLayout
         android:id="@+id/sizes_coordinator_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <android.support.design.widget.AppBarLayout
             android:id="@+id/app_bar_sizes"
@@ -51,6 +51,7 @@
 
 
             <RelativeLayout
+                android:id="@+id/layout_of_cards"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:duplicateParentState="false"
@@ -65,6 +66,8 @@
                     android:layout_height="55dp"
                     app:cardCornerRadius="10dp"
                     app:cardElevation="5dp"
+                    android:clickable="true"
+                    android:foreground="?android:attr/selectableItemBackground"
                     android:layout_margin="10dp">
 
                     <RelativeLayout
@@ -111,6 +114,8 @@
                 android:layout_height="55dp"
                 app:cardCornerRadius="10dp"
                 app:cardElevation="5dp"
+                    android:clickable="true"
+                    android:foreground="?android:attr/selectableItemBackground"
                 android:layout_below="@+id/card_qnt_200"
                 android:layout_margin="10dp">
 
@@ -158,6 +163,8 @@
                     android:layout_height="55dp"
                     app:cardCornerRadius="10dp"
                     app:cardElevation="5dp"
+                    android:clickable="true"
+                    android:foreground="?android:attr/selectableItemBackground"
                     android:layout_below="@+id/card_qnt_300"
                     android:layout_margin="10dp">
 
@@ -204,6 +211,8 @@
                     android:layout_height="55dp"
                     app:cardCornerRadius="10dp"
                     app:cardElevation="5dp"
+                    android:clickable="true"
+                    android:foreground="?android:attr/selectableItemBackground"
                     android:backgroundTint="@color/colorPrimaryDark"
                     android:layout_below="@+id/card_qnt_400"
                     android:layout_margin="10dp">
@@ -253,6 +262,8 @@
                     android:layout_height="55dp"
                     app:cardCornerRadius="10dp"
                     app:cardElevation="5dp"
+                    android:clickable="true"
+                    android:foreground="?android:attr/selectableItemBackground"
                     android:layout_below="@+id/card_qnt_500"
                     android:layout_margin="10dp">
 
@@ -294,11 +305,16 @@
                 </android.support.v7.widget.CardView>
 
 
-
             </RelativeLayout>
 
         </android.support.v4.widget.NestedScrollView>
 
     </android.support.design.widget.CoordinatorLayout>
+
+    <android.support.design.widget.BottomNavigationView
+        android:layout_width="match_parent"
+        android:layout_height="56dp">
+
+    </android.support.design.widget.BottomNavigationView>
 
 </RelativeLayout>
