--- a/app/src/main/res/layout/dialog_confirm_cancel.xml
+++ b/app/src/main/res/layout/dialog_confirm_cancel.xml
@@ -1,51 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_width="match_parent"
     android:id="@+id/card_view_dialog"
-    app:cardCornerRadius="10dp"
-    app:cardElevation="5dp">
+    android:background="@drawable/dialog_bg">
     
     <RelativeLayout
         android:id="@+id/rl_card_dialog"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:layout_centerHorizontal="true">
 
-        <ImageView
-            android:id="@+id/img_card_dialog"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true"
-            android:layout_margin="5dp"
-            android:contentDescription="@string/app_name"
-            android:src="@drawable/iconacai"/>
-
-        <LinearLayout
-            android:layout_below="@+id/img_card_dialog"
+        <TextView
+            android:id="@+id/txt_main_dialog"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true">
+            android:text="Confirmar Pedido?"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="20dp"
+            android:textSize="20dp"/>
+
+        <TextView
+            android:id="@+id/txt_tipo_dialog"
+            android:layout_below="@+id/txt_main_dialog"
+            android:layout_margin="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Carregando..."
+            android:layout_centerHorizontal="true"
+            android:textSize="22dp"/>
+
+        <TextView
+            android:id="@+id/txt_com_dialog"
+            android:layout_below="@+id/txt_tipo_dialog"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="com"
+            android:textColor="@color/colorPrimary"
+            android:layout_centerHorizontal="true"
+            android:textSize="18dp"/>
+
+        <TextView
+            android:id="@+id/txt_comp_dialog"
+            android:layout_below="@+id/txt_com_dialog"
+            android:layout_marginTop="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Carregando..."
+            android:textAlignment="center"
+            android:layout_centerHorizontal="true"
+            android:textSize="18dp"/>
+
+        <TextView
+            android:id="@+id/txt_total_dialog"
+            android:layout_below="@+id/txt_comp_dialog"
+            android:layout_marginTop="40dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Total"
+            android:textAlignment="center"
+            android:layout_centerHorizontal="true"
+            android:textSize="18dp"/>
+
+        <TextView
+            android:id="@+id/txt_valor_dialog"
+            android:layout_below="@+id/txt_total_dialog"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Carregando..."
+            android:layout_marginTop="05dp"
+            android:layout_centerHorizontal="true"
+            android:textColor="@color/colorPrimary"
+            android:textSize="22dp"/>
+
+
+        <LinearLayout
+            android:layout_below="@+id/txt_valor_dialog"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="20dp">
 
             <Button
                 android:id="@+id/card_dialog_btn_confirm"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="113dp"
+                android:layout_height="46dp"
                 android:layout_marginTop="20dp"
-                android:layout_marginRight="40dp"
-                android:background=""/>
+                android:layout_marginRight="10dp"
+                android:background="@drawable/btndialogconfirmar"
+                android:elevation="5dp"/>
 
             <Button
                 android:id="@+id/card_dialog_btn_cancel"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="113dp"
+                android:layout_height="46dp"
                 android:layout_marginTop="20dp"
-                android:layout_marginLeft="40dp"/>
+                android:layout_marginLeft="10dp"
+                android:background="@drawable/btndialogvoltar"
+                android:elevation="5dp"/>
 
         </LinearLayout>
 
     </RelativeLayout>
 
-</android.support.v7.widget.CardView>
+</RelativeLayout>
