--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -3,10 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@android:color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Cart">
+    tools:context=".Cart"
+    android:id="@+id/rootLayout"
+    android:background="#f1f1f1">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/list_cart"
@@ -15,19 +16,20 @@
         android:layout_above="@+id/card_view_cartbtntotal"
         android:background="@android:color/transparent"/>
 
-    <android.support.v7.widget.CardView
+    <RelativeLayout
         android:id="@+id/card_view_cartbtntotal"
         android:layout_alignParentBottom="true"
-        app:cardBackgroundColor="@android:color/white"
-        app:cardElevation="0dp"
+        android:background="#f1f1f1"
         android:layout_width="match_parent"
-        android:layout_height="120dp">
+        android:layout_height="150dp">
 
         <RelativeLayout
+            android:id="@+id/cart_relat_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <LinearLayout
+                android:id="@+id/cart_linear_layout"
                 android:layout_margin="8dp"
                 android:gravity="center"
                 android:orientation="horizontal"
@@ -71,6 +73,6 @@
 
         </RelativeLayout>
 
-    </android.support.v7.widget.CardView>
+    </RelativeLayout>
 
 </RelativeLayout>
