--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.mxn.soul.flowingdrawer_core.FlowingDrawer
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawerlayout"
+    android:fitsSystemWindows="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
+    android:clipChildren="false"
+    android:clipToPadding="false"
+    app:edPosition="1"
+    app:edMenuSize="260dp"
+    app:edMenuBackground="#FFFFFF"
     tools:context="com.devup.opointdoacai.opointdoacai.MainActivity"
-    android:id="@+id/main_layout"
-    android:background="#FFFFFF">
+    android:background="#f1f1f1">
 
     <android.support.design.widget.CoordinatorLayout
         android:id="@+id/main_coordinator_layout"
@@ -35,10 +40,11 @@
 
                 <android.support.v7.widget.Toolbar
                     android:id="@+id/toolbar_id_main"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="?attr/actionBarSize"
                     app:layout_collapseMode="pin"
-                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+                    app:navigationIcon="@drawable/menu">
 
                 </android.support.v7.widget.Toolbar>
 
@@ -338,4 +344,194 @@
 
     </android.support.design.widget.CoordinatorLayout>
 
-</RelativeLayout>
+        <!--menu-->
+        <com.mxn.soul.flowingdrawer_core.FlowingMenuLayout
+            android:id="@+id/menulayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_marginTop="30dp"
+                android:background="@android:color/white">
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/img_header"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
+                    android:src="@drawable/img_menu_menu"
+                    android:layout_margin="20dp"
+                    android:layout_centerHorizontal="true"/>
+
+                <TextView
+                    android:id="@+id/txt_header"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginBottom="20dp"
+                    android:text="O Point do Açaí - Menu"
+                    android:textColor="@color/colorSecondaryText"
+                    android:layout_below="@id/img_header"
+                    android:textSize="20sp"
+                    android:fontFamily="@font/source_sans_pro"/>
+
+                <RelativeLayout
+                    android:id="@+id/home_acess"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:clickable="true"
+                    android:layout_below="@+id/txt_header">
+
+                    <ImageView
+                        android:id="@+id/ic_home"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_centerVertical="true"
+                        android:src="@drawable/ic_home"
+                        android:layout_margin="10dp"/>
+
+                    <TextView
+                        android:id="@+id/txt_home"
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_margin="10dp"
+                        android:text="Home"
+                        android:textColor="@color/colorPrimary"
+                        android:layout_toRightOf="@+id/ic_home"
+                        android:textSize="18sp"
+                        android:fontFamily="@font/source_sans_pro"/>
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/order_acess"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:clickable="true"
+                    android:layout_below="@+id/home_acess">
+
+                    <ImageView
+                        android:id="@+id/ic_order"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_centerVertical="true"
+                        android:src="@drawable/ic_shop_bag"
+                        android:layout_margin="10dp"/>
+
+                    <TextView
+                        android:id="@+id/txt_order"
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_margin="10dp"
+                        android:textColor="@color/colorSecondaryText"
+                        android:text="Pedidos"
+                        android:layout_toRightOf="@+id/ic_order"
+                        android:textSize="18sp"
+                        android:fontFamily="@font/source_sans_pro"/>
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/cart_acess"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:clickable="true"
+                    android:layout_below="@+id/order_acess">
+
+                    <ImageView
+                        android:id="@+id/ic_cart"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_centerVertical="true"
+                        android:src="@drawable/ic_shopping_cart"
+                        android:layout_margin="10dp"/>
+
+                    <TextView
+                        android:id="@+id/txt_cart"
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_margin="10dp"
+                        android:textColor="@color/colorSecondaryText"
+                        android:text="Carrinho"
+                        android:layout_toRightOf="@+id/ic_cart"
+                        android:textSize="18sp"
+                        android:fontFamily="@font/source_sans_pro"/>
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/fide_acess"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:clickable="true"
+                    android:layout_below="@+id/cart_acess">
+
+                    <ImageView
+                        android:id="@+id/ic_fide"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_centerVertical="true"
+                        android:src="@drawable/ic_gift_box"
+                        android:layout_margin="10dp"/>
+
+                    <TextView
+                        android:id="@+id/txt_fide"
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_margin="10dp"
+                        android:textColor="@color/colorSecondaryText"
+                        android:text="Fidelidade"
+                        android:layout_toRightOf="@+id/ic_fide"
+                        android:textSize="18sp"
+                        android:fontFamily="@font/source_sans_pro"/>
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/out_acess"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginBottom="30dp"
+                    android:clickable="true"
+                    android:layout_alignParentBottom="true">
+
+                    <ImageView
+                        android:id="@+id/ic_out"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_centerVertical="true"
+                        android:src="@drawable/ic_sign_out"
+                        android:layout_margin="10dp"/>
+
+                    <TextView
+                        android:id="@+id/txt_out"
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_margin="10dp"
+                        android:textColor="@color/colorSecondaryText"
+                        android:text="Sair"
+                        android:layout_toRightOf="@+id/ic_out"
+                        android:textSize="18sp"
+                        android:fontFamily="@font/source_sans_pro"/>
+
+                </RelativeLayout>
+
+            </RelativeLayout>
+
+        </com.mxn.soul.flowingdrawer_core.FlowingMenuLayout>
+
+</com.mxn.soul.flowingdrawer_core.FlowingDrawer>
