--- a/app/src/main/res/layout/dialog_adress.xml
+++ b/app/src/main/res/layout/dialog_adress.xml
@@ -8,10 +8,10 @@
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/adress_image"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:layout_centerHorizontal="true"
-        android:layout_margin="20dp"
+        android:layout_marginTop="20dp"
         android:src="@drawable/map"
         android:gravity="center" />
 
@@ -20,7 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/adress_image"
-        android:layout_margin="20dp"
+        android:layout_margin="10dp"
         android:text="Digite o endereço de entrega"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="20dp"
@@ -72,7 +72,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:ems="10"
         android:hint="Nº..."
         android:inputType="numberSigned"
@@ -90,7 +90,7 @@
         android:layout_below="@+id/edt_num"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:ems="10"
         android:hint="Bairro..."
         android:inputType="text"
@@ -108,7 +108,7 @@
         android:layout_below="@+id/edt_bairro"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:ems="10"
         android:entries="@array/cidades_array"
         android:paddingBottom="15dp"
@@ -120,11 +120,62 @@
 
     </Spinner>
 
+    <TextView
+        android:id="@+id/txt_dialog_adress2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/spinner_cidade"
+        android:layout_marginTop="20dp"
+        android:text="Como deseja pagar?"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="20dp"
+        android:textSize="20dp"/>
+
+    <RadioGroup
+        android:id="@+id/radio_group"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/txt_dialog_adress2"
+        android:gravity="right"
+        android:layout_marginLeft="50dp">
+
+        <RadioButton
+            android:id="@+id/rdiCOD"
+            android:text="Dinheiro"
+            android:textSize="16dp"
+            android:layout_margin="2dp"
+            android:textColor="@color/colorSecondaryText"
+            android:fontFamily="@font/source_sans_pro"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <RadioButton
+            android:id="@+id/rdiCard"
+            android:text="Cartão"
+            android:textSize="16dp"
+            android:layout_margin="2dp"
+            android:textColor="@color/colorSecondaryText"
+            android:fontFamily="@font/source_sans_pro"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <RadioButton
+            android:id="@+id/rdiCardCOD"
+            android:text="Dinheiro e Cartão"
+            android:textSize="16dp"
+            android:layout_margin="2dp"
+            android:textColor="@color/colorSecondaryText"
+            android:fontFamily="@font/source_sans_pro"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </RadioGroup>
+
     <Button
         android:id="@+id/btn_continuar_dialog_adress"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/spinner_cidade"
+        android:layout_below="@+id/radio_group"
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
