--- a/app/src/main/res/layout/activity_comp.xml
+++ b/app/src/main/res/layout/activity_comp.xml
@@ -37,7 +37,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:layout_collapseMode="pin"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+                app:navigationIcon="@drawable/ic_arrow_back_white_24dp">
 
             </android.support.v7.widget.Toolbar>
 
