--- a/app/src/main/res/layout/activity_sizes.xml
+++ b/app/src/main/res/layout/activity_sizes.xml
@@ -8,14 +8,22 @@
     tools:context=".SizesActivity"
     android:background="#f1f1f1">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar_id_sizes"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/colorPrimaryDark"
+        app:navigationIcon="@drawable/ic_arrow_back_white_24dp">
+
+    </android.support.v7.widget.Toolbar>
+
 
     <RelativeLayout
         android:id="@+id/layout_of_cards"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:duplicateParentState="false"
-        android:gravity="center|top"
-        android:layout_above="@+id/bottom_navigation"
+        android:gravity="center"
         android:layout_marginTop="50dp"
         app:layout_constraintTop_toTopOf="parent">
 
