--- a/app/src/main/res/drawable/background.xml
+++ b/app/src/main/res/drawable/background.xml
@@ -2,8 +2,8 @@
 <shape android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <gradient android:angle="0"
-        android:startColor="#38EF7D"
-        android:endColor="#7535AD"/>
+    <gradient android:angle="-135"
+        android:startColor="#834D9B"
+        android:endColor="#9733EE"/>
 
 </shape>
