--- a/app/src/main/res/layout/activity_authentication.xml
+++ b/app/src/main/res/layout/activity_authentication.xml
@@ -15,7 +15,7 @@
             android:id="@+id/first"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorPrimary">
+            android:background="@color/colorPrimaryDark">
             <com.shuhart.stepview.StepView
                 android:id="@+id/step_view"
                 android:layout_width="209dp"
@@ -53,8 +53,10 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Digite o numero do seu celular"
+                android:text="Digite o número do seu celular"
                 android:textStyle="bold"
+                android:fontFamily="@font/source_sans_pro"
+                android:textColor="#646464"
                 android:textSize="20sp"
                 android:textAlignment="center"
                 android:layout_marginBottom="20dp"/>
@@ -70,6 +72,7 @@
                     android:id="@+id/phonenumber"
                     android:background="@drawable/edittext_background"
                     android:padding="10dp"
+                    android:textAlignment="center"
                     android:layout_marginEnd="40dp"
                     android:layout_marginStart="40dp"
                     android:layout_width="match_parent"
@@ -83,8 +86,10 @@
                 android:layout_marginEnd="10dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="20dp"
-                android:fontFamily="sans-serif"
+                android:fontFamily="@font/source_sans_pro"
+                android:textColor="#646464"
                 android:text="Click em Próximo Passo para verificar seu número de celular. Você não precisa entrar manualmente com o código de verificação enviado"/>
+
             <Button
                 android:background="@drawable/button_main_background"
                 android:textColor="#fff"
@@ -95,7 +100,9 @@
                 android:layout_marginStart="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/source_sans_pro"
                 android:text="Próximo Passo"/>
+
         </LinearLayout>
 
         <LinearLayout
@@ -120,7 +127,9 @@
                 android:textAlignment="center"
                 android:textStyle="bold"
                 android:textSize="18sp"
-                android:text="Digite o código enviado por SMS para"/>
+                android:fontFamily="@font/source_sans_pro"
+                android:textColor="#646464"
+                android:text="Se o código de verificação enviado por SMS não ser reconhecido automaticamente, digite abaixo manualmente"/>
             <TextView
                 android:id="@+id/phonenumberText"
                 android:layout_width="match_parent"
@@ -128,8 +137,9 @@
                 android:text="+918372890302"
                 android:textAlignment="center"
                 android:textSize="20sp"
-                android:textColor="#019b77"
+                android:textColor="@color/colorPrimary"
                 android:textStyle="bold"/>
+
             <com.chaos.view.PinView
                 android:id="@+id/pinView"
                 style="@style/PinWidget.PinView"
@@ -138,7 +148,7 @@
                 android:inputType="number"
                 android:padding="10dp"
                 android:layout_marginTop="40dp"
-                android:textColor="#222222"
+                android:textColor="#212121"
                 android:textSize="18sp"
                 android:cursorVisible="true"
                 app:cursorColor="@color/colorAccent"
@@ -148,7 +158,7 @@
                 app:itemRadius="4dp"
                 app:itemSpacing="5dp"
                 app:itemWidth="36dp"
-                app:lineColor="#2f64ba"
+                app:lineColor="@color/colorPrimary"
                 app:lineWidth="2dp"
                 app:viewType="rectangle" />
 
@@ -158,6 +168,7 @@
                 android:textStyle="bold"
                 android:textColor="#fff"
                 android:id="@+id/submit2"
+                android:fontFamily="@font/source_sans_pro"
                 android:layout_marginEnd="20dp"
                 android:layout_marginStart="20dp"
                 android:layout_width="match_parent"
@@ -166,12 +177,14 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="#019b77"
+                android:textColor="@color/colorPrimary"
                 android:textStyle="bold"
+                android:fontFamily="@font/source_sans_pro"
                 android:textAlignment="center"
                 android:text="Não recebi o código"
                 android:textSize="20sp"
                 android:layout_marginTop="20dp"/>
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -182,40 +195,54 @@
                 android:layout_marginTop="20dp"/>
         </LinearLayout>
 
-        <LinearLayout
+        <RelativeLayout
             android:id="@+id/layout3"
-            android:visibility="gone"
             android:gravity="center"
-            android:background="#00A99D"
+            android:visibility="gone"
+            android:background="@drawable/backgroundpurple"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
-            <pl.droidsonroids.gif.GifImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/panda_dribbble"/>
             <TextView
+                android:id="@+id/txt_auth"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Perfeito! Seu número está verificado. Clique em Continuar para entrar"
+                android:layout_centerHorizontal="true"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:layout_marginTop="300dp"
+                android:text="Perfeito! Seu número foi verificado com sucesso! Agora, Digite seu nome abaixo e clique em Continuar."
                 android:textColor="#fff"
-                android:layout_marginEnd="10dp"
-                android:layout_marginStart="10dp"
                 android:textStyle="bold"
                 android:textSize="18sp"
+                android:fontFamily="@font/source_sans_pro"
                 android:textAlignment="center"/>
+
+            <EditText
+                android:id="@+id/edt_nome_auth"
+                android:layout_below="@+id/txt_auth"
+                android:background="@drawable/edittext_background"
+                android:padding="10dp"
+                android:hint="Nome"
+                android:textColor="#212121"
+                android:textAlignment="center"
+                android:layout_margin="30dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPersonName" />
+
             <Button
                 android:id="@+id/submit3"
-                android:layout_marginTop="20dp"
                 android:background="@drawable/button_main_background"
                 android:textStyle="bold"
                 android:textColor="#fff"
-                android:layout_marginEnd="20dp"
-                android:layout_marginStart="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_margin="50dp"
+                android:fontFamily="@font/source_sans_pro"
                 android:text="Continuar"/>
-        </LinearLayout>
+        </RelativeLayout>
 
     </LinearLayout>
 
