--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -12,6 +12,7 @@
     <android.support.design.widget.CoordinatorLayout
         android:id="@+id/coordinator_layout_cart"
         android:layout_width="match_parent"
+        android:layout_above="@+id/card_view_cartbtntotal"
         android:layout_height="wrap_content">
 
         <RelativeLayout
@@ -105,7 +106,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                android:layout_margin="20dp"
-                android:background="@drawable/bgbtnconfirmar"
+                android:background="@drawable/button_main_background"
                 android:elevation="8dp"
                 android:layout_alignParentBottom="true"/>
 
