--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
                 android:id="@+id/collapsing_toolbar_main"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@drawable/path"
+                android:background="@drawable/colapsing_header"
                 app:contentScrim="?attr/colorPrimaryDark"
                 app:expandedTitleMarginEnd="64dp"
                 app:expandedTitleMarginStart="48dp"
@@ -119,7 +119,7 @@
                             android:id="@+id/btn_acai"
                             android:layout_width="120dp"
                             android:layout_height="28dp"
-                            android:background="@drawable/bgbtnselecionar"
+                            android:background="@drawable/button_main_background"
                             android:fontFamily="@font/source_sans_pro"
                             android:text="Selecionar"
                             android:textSize="14sp"
@@ -174,7 +174,7 @@
                             android:id="@+id/btn_acai_top"
                             android:layout_width="120dp"
                             android:layout_height="28dp"
-                            android:background="@drawable/bgbtnselecionar"
+                            android:background="@drawable/button_main_background"
                             android:fontFamily="@font/source_sans_pro"
                             android:text="Selecionar"
                             android:textSize="14sp"
@@ -239,7 +239,7 @@
                             android:id="@+id/btn_sucos"
                             android:layout_width="120dp"
                             android:layout_height="28dp"
-                            android:background="@drawable/bgbtnselecionar"
+                            android:background="@drawable/button_main_background"
                             android:fontFamily="@font/source_sans_pro"
                             android:text="Selecionar"
                             android:textSize="14sp"
@@ -294,7 +294,7 @@
                             android:id="@+id/btn_vitaminas"
                             android:layout_width="120dp"
                             android:layout_height="28dp"
-                            android:background="@drawable/bgbtnselecionar"
+                            android:background="@drawable/button_main_background"
                             android:fontFamily="@font/source_sans_pro"
                             android:text="Selecionar"
                             android:textSize="14sp"
@@ -359,7 +359,7 @@
                             android:id="@+id/btn_saladadefrutas"
                             android:layout_width="200dp"
                             android:layout_height="28dp"
-                            android:background="@drawable/bgbtnconfirmar"
+                            android:background="@drawable/button_main_background"
                             android:fontFamily="@font/source_sans_pro"
                             android:text="Selecionar"
                             android:textSize="14sp"
@@ -425,7 +425,7 @@
                         android:layout_width="30dp"
                         android:layout_height="30dp"
                         android:layout_centerVertical="true"
-                        android:src="@drawable/ic_home"
+                        android:src="@drawable/home"
                         android:layout_margin="10dp"/>
 
                     <TextView
@@ -455,7 +455,7 @@
                         android:layout_width="30dp"
                         android:layout_height="30dp"
                         android:layout_centerVertical="true"
-                        android:src="@drawable/ic_shop_bag"
+                        android:src="@drawable/supermarket_bag"
                         android:layout_margin="10dp"/>
 
                     <TextView
@@ -485,7 +485,7 @@
                         android:layout_width="30dp"
                         android:layout_height="30dp"
                         android:layout_centerVertical="true"
-                        android:src="@drawable/ic_shopping_cart"
+                        android:src="@drawable/shopping_cart"
                         android:layout_margin="10dp"/>
 
                     <TextView
@@ -515,7 +515,7 @@
                         android:layout_width="30dp"
                         android:layout_height="30dp"
                         android:layout_centerVertical="true"
-                        android:src="@drawable/ic_gift_box"
+                        android:src="@drawable/medal"
                         android:layout_margin="10dp"/>
 
                     <TextView
@@ -548,7 +548,7 @@
                         android:layout_width="30dp"
                         android:layout_height="30dp"
                         android:layout_centerVertical="true"
-                        android:src="@drawable/ic_sign_out"
+                        android:src="@drawable/exit"
                         android:layout_margin="10dp"/>
 
                     <TextView
