--- a/app/src/main/res/layout/dialog_adress.xml
+++ b/app/src/main/res/layout/dialog_adress.xml
@@ -1,192 +1,207 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/adress_dialog"
     android:background="@drawable/dialog_bg">
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/adress_image"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        android:src="@drawable/map"
-        android:gravity="center" />
-
-    <TextView
-        android:id="@+id/txt_dialog_adress"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/adress_image"
-        android:layout_margin="10dp"
-        android:text="Digite o endereço de entrega"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="20dp"
-        android:textSize="20dp"/>
-
-    <EditText
-        android:id="@+id/edt_cep"
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/txt_dialog_adress"
-        android:layout_centerHorizontal="true"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginTop="10dp"
-        android:ems="10"
-        android:maxLength="8"
-        android:hint="CEP..."
-        android:inputType="text"
-        android:paddingBottom="15dp"
-        android:paddingLeft="25dp"
-        android:paddingRight="25dp"
-        android:paddingTop="15dp"
-        android:textSize="16sp" />
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-    <EditText
-        android:id="@+id/edt_rua"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/edt_cep"
-        android:layout_centerHorizontal="true"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginTop="10dp"
-        android:ems="10"
-        android:hint="Rua..."
-        android:inputType="text"
-        android:paddingBottom="15dp"
-        android:paddingLeft="25dp"
-        android:paddingRight="25dp"
-        android:paddingTop="15dp"
-        android:textSize="16sp"
-        android:visibility="visible" />
-
-    <EditText
-        android:id="@+id/edt_num"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/edt_rua"
-        android:layout_centerHorizontal="true"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginTop="10dp"
-        android:ems="10"
-        android:hint="Nº..."
-        android:inputType="numberSigned"
-        android:paddingBottom="15dp"
-        android:paddingLeft="25dp"
-        android:paddingRight="25dp"
-        android:paddingTop="15dp"
-        android:textSize="16sp"
-        android:visibility="visible" />
-
-    <EditText
-        android:id="@+id/edt_bairro"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/edt_num"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginTop="10dp"
-        android:ems="10"
-        android:hint="Bairro..."
-        android:inputType="text"
-        android:paddingBottom="15dp"
-        android:paddingLeft="25dp"
-        android:paddingRight="25dp"
-        android:paddingTop="15dp"
-        android:textSize="16sp"
-        android:visibility="visible" />
-
-    <Spinner
-        android:id="@+id/spinner_cidade"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/edt_bairro"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginTop="10dp"
-        android:ems="10"
-        android:entries="@array/cidades_array"
-        android:paddingBottom="15dp"
-        android:paddingLeft="25dp"
-        android:paddingRight="25dp"
-        android:paddingTop="15dp"
-        android:textSize="16sp"
-        android:visibility="visible">
-
-    </Spinner>
-
-    <TextView
-        android:id="@+id/txt_dialog_adress2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/spinner_cidade"
-        android:layout_marginTop="20dp"
-        android:text="Como deseja pagar?"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="20dp"
-        android:textSize="20dp"/>
-
-    <RadioGroup
-        android:id="@+id/radio_group"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/txt_dialog_adress2"
-        android:gravity="right"
-        android:layout_marginLeft="50dp">
-
-        <RadioButton
-            android:id="@+id/rdiCOD"
-            android:text="Dinheiro"
-            android:textSize="16dp"
-            android:layout_margin="2dp"
-            android:textColor="@color/colorSecondaryText"
-            android:fontFamily="@font/source_sans_pro"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent">
 
-        <RadioButton
-            android:id="@+id/rdiCard"
-            android:text="Cartão"
-            android:textSize="16dp"
-            android:layout_margin="2dp"
-            android:textColor="@color/colorSecondaryText"
-            android:fontFamily="@font/source_sans_pro"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            <com.airbnb.lottie.LottieAnimationView
+                android:id="@+id/adress_animation_view"
+                android:layout_width="130dp"
+                android:layout_height="130dp"
+                app:lottie_fileName="location_map_pin.json"
+                app:lottie_loop="true"
+                android:layout_margin="0dp"
+                android:padding="0dp"
+                android:layout_centerHorizontal="true"
+                app:lottie_autoPlay="true" />
 
-        <RadioButton
-            android:id="@+id/rdiCardCOD"
-            android:text="Dinheiro e Cartão"
-            android:textSize="16dp"
-            android:layout_margin="2dp"
-            android:textColor="@color/colorSecondaryText"
-            android:fontFamily="@font/source_sans_pro"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            <TextView
+                android:id="@+id/txt_dialog_adress"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/adress_animation_view"
+                android:layout_margin="0dp"
+                android:text="Digite o endereço de entrega"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="20dp"
+                android:textSize="20dp"/>
 
-    </RadioGroup>
+            <EditText
+                android:id="@+id/edt_cep"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/txt_dialog_adress"
+                android:layout_centerHorizontal="true"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:layout_marginTop="10dp"
+                android:ems="10"
+                android:maxLength="8"
+                android:hint="CEP..."
+                android:inputType="text"
+                android:paddingBottom="15dp"
+                android:paddingLeft="25dp"
+                android:paddingRight="25dp"
+                android:paddingTop="15dp"
+                android:textSize="16sp" />
 
-    <Button
-        android:id="@+id/btn_continuar_dialog_adress"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/radio_group"
-        android:layout_centerHorizontal="true"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
-        android:background="@drawable/bgbtnconfirmar"
-        android:textColor="@color/colorTextWithe"
-        android:fontFamily="@font/source_sans_pro"
-        android:text="Continuar"
-        android:textAllCaps="false"
-        android:textSize="16sp" />
+            <EditText
+                android:id="@+id/edt_rua"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/edt_cep"
+                android:layout_centerHorizontal="true"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:layout_marginTop="10dp"
+                android:ems="10"
+                android:hint="Rua..."
+                android:inputType="text"
+                android:paddingBottom="15dp"
+                android:paddingLeft="25dp"
+                android:paddingRight="25dp"
+                android:paddingTop="15dp"
+                android:textSize="16sp"
+                android:visibility="visible" />
+
+            <EditText
+                android:id="@+id/edt_num"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/edt_rua"
+                android:layout_centerHorizontal="true"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:layout_marginTop="10dp"
+                android:ems="10"
+                android:hint="Nº..."
+                android:inputType="numberSigned"
+                android:paddingBottom="15dp"
+                android:paddingLeft="25dp"
+                android:paddingRight="25dp"
+                android:paddingTop="15dp"
+                android:textSize="16sp"
+                android:visibility="visible" />
+
+            <EditText
+                android:id="@+id/edt_bairro"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/edt_num"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:layout_marginTop="10dp"
+                android:ems="10"
+                android:hint="Bairro..."
+                android:inputType="text"
+                android:paddingBottom="15dp"
+                android:paddingLeft="25dp"
+                android:paddingRight="25dp"
+                android:paddingTop="15dp"
+                android:textSize="16sp"
+                android:visibility="visible" />
+
+            <Spinner
+                android:id="@+id/spinner_cidade"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/edt_bairro"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:layout_marginTop="10dp"
+                android:ems="10"
+                android:entries="@array/cidades_array"
+                android:paddingBottom="15dp"
+                android:paddingLeft="25dp"
+                android:paddingRight="25dp"
+                android:paddingTop="15dp"
+                android:textSize="16sp"
+                android:visibility="visible">
+
+            </Spinner>
+
+            <TextView
+                android:id="@+id/txt_dialog_adress2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/spinner_cidade"
+                android:layout_marginTop="20dp"
+                android:text="Como deseja pagar?"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="20dp"
+                android:textSize="20dp"/>
+
+            <RadioGroup
+                android:id="@+id/radio_group"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/txt_dialog_adress2"
+                android:gravity="right"
+                android:layout_marginLeft="50dp">
+
+                <RadioButton
+                    android:id="@+id/rdiCOD"
+                    android:text="Dinheiro"
+                    android:textSize="16dp"
+                    android:layout_margin="2dp"
+                    android:textColor="@color/colorSecondaryText"
+                    android:fontFamily="@font/source_sans_pro"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <RadioButton
+                    android:id="@+id/rdiCard"
+                    android:text="Cartão"
+                    android:textSize="16dp"
+                    android:layout_margin="2dp"
+                    android:textColor="@color/colorSecondaryText"
+                    android:fontFamily="@font/source_sans_pro"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <RadioButton
+                    android:id="@+id/rdiCardCOD"
+                    android:text="Dinheiro e Cartão"
+                    android:textSize="16dp"
+                    android:layout_margin="2dp"
+                    android:textColor="@color/colorSecondaryText"
+                    android:fontFamily="@font/source_sans_pro"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+            </RadioGroup>
+
+            <Button
+                android:id="@+id/btn_continuar_dialog_adress"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/radio_group"
+                android:layout_centerHorizontal="true"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                android:background="@drawable/button_main_background"
+                android:textColor="@color/colorTextWithe"
+                android:fontFamily="@font/source_sans_pro"
+                android:text="Continuar"
+                android:textAllCaps="false"
+                android:textSize="16sp" />
+
+        </RelativeLayout>
+
+    </android.support.v4.widget.NestedScrollView>
 
 
 </RelativeLayout>
