--- a/app/src/main/res/layout/processing_dialog.xml
+++ b/app/src/main/res/layout/processing_dialog.xml
@@ -1,24 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="wrap_content"
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center"
-    android:background="#FFFFFF"
+    android:elevation="10dp"
+    android:padding="20dp"
+    app:cardCornerRadius="20dp"
+    android:background="@drawable/dialog_bg"
     android:orientation="vertical">
 
-    <pl.droidsonroids.gif.GifImageView
-        android:layout_width="300dp"
-        android:layout_height="260dp"
-        android:background="@drawable/gifblocks"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Verificando número"
-        android:textColor="#646464"
-        android:textSize="25sp"
-        android:textStyle="bold"
-        android:fontFamily="sans-serif"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="10dp"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-</LinearLayout>
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/animation_view_proc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:lottie_fileName="wave_load.json"
+            app:lottie_loop="true"
+            android:layout_margin="20dp"
+            android:layout_centerHorizontal="true"
+            app:lottie_autoPlay="true" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/animation_view_proc"
+            android:text="Verificando número"
+            android:textColor="#646464"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            android:fontFamily="@font/source_sans_pro"
+            android:layout_centerHorizontal="true"
+            android:layout_margin="20dp"/>
+
+    </RelativeLayout>
+
+</android.support.v7.widget.CardView>
