--- a/app/src/main/res/layout/profile_create_dialog.xml
+++ b/app/src/main/res/layout/profile_create_dialog.xml
@@ -1,25 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:gravity="center_horizontal"
-    android:background="#FFFFFF">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:gravity="center"
+    android:elevation="10dp"
+    app:cardCornerRadius="20dp"
+    android:background="@drawable/dialog_bg"
+    android:orientation="vertical">
 
-    <pl.droidsonroids.gif.GifImageView
-        android:layout_width="250dp"
-        android:layout_height="300dp"
-        android:background="@drawable/animated_loading__buble"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Entrando"
-        android:textColor="#646464"
-        android:textSize="25sp"
-        android:textStyle="bold"
-        android:fontFamily="sans-serif"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="10dp"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="20dp">
 
-</LinearLayout>
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/animation_view2"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            app:lottie_fileName="success.json"
+            app:lottie_loop="true"
+            android:layout_margin="20dp"
+            android:layout_centerHorizontal="true"
+            app:lottie_autoPlay="true" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/animation_view2"
+            android:text="Entrando"
+            android:textColor="#646464"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            android:fontFamily="@font/source_sans_pro"
+            android:layout_centerHorizontal="true"
+            android:layout_margin="20dp"/>
+
+    </RelativeLayout>
+
+
+</android.support.v7.widget.CardView>
